[package]
name = "ble-thermometers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = "1"
futures = "0.3.21"
chrono = "0.4.31"
gluesql = "0.15.0"
